# rogue-engine

./: .gitignore  CMakeLists.txt  README.md  codecov.yaml
.github/workflows/: install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: SourcesAndHeaders.cmake
documentation/: CMakeLists.txt
include/: rogue.hpp
include/rogue/: EntryPoint.hpp
include/rogue/core/: Game.hpp
include/rogue/core/math/: Util.hpp
include/rogue/core/memory/: PoolAllocator.hpp  SmartPointer.hpp  StackAllocator.hpp
include/rogue/core/types/: Stack.hpp
include/rogue/core/utils/: Assertion.hpp  DebugBreak.hpp  Logger.hpp
source/core/: Game.cpp
source/core/utils/: Logger.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp  sandbox.cpp
test/: CMakeLists.txt
test/source/: Game.cpp  greeter.cpp  main.cpp
test/source/core/memory/: PoolAllocator.cpp  SmartPointer.cpp  StackAllocator.cpp
test/source/core/types/: Stack.cpp
test/source/core/utils/: Assertion.cpp  Logger.cpp
